--- a/Abdulhamid Ibrahim_EDA.ipynb
+++ b/Abdulhamid Ibrahim_EDA.ipynb
@@ -990,7 +990,7 @@
    "source": [
     "plt.plot(coi['Time Serie'], coi.ZAR, label = 'ZAR')\n",
     "plt.plot(coi['Time Serie'], coi.INR, label = 'INR')\n",
-    "plt.plot(coi['Time Serie'], coi.EUR, label = 'EUR')\n",
+    "plt.plot(coi['Time Serie'], coi.GBP, label = 'GBP')\n",
     "plt.xlabel('Date')\n",
     "plt.ylabel('Currency')\n",
     "plt.grid(True);"
